--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="body.css">
+    <link rel="stylesheet" href="body.css" type="text.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="Container">
+        <div id="title">
+            <h1>Hola como están</h1>
+        </div>
+    </div>
 </body>
 </html>
