--- a/index.html
+++ b/index.html
@@ -3,13 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="body.css" type="text.css">
+    <link rel="stylesheet" href="body.css">
     <title>Document</title>
 </head>
 <body>
-    <div id="Container">
+    <div id="container">
         <div id="title">
             <h1>Hola como están</h1>
+            <img src="..\e51635bf5a1cb9c2983172d91842f981d1a9847cd625f0530be2f32c4bbfc45c.jpg" alt="Plata chingona">
+        </div>
+        <div id="formulario">
+            <form action="/my-handling-form-page" method="post">
+                <ul>
+                    <li>
+                        <label for="name">Nombre:</label>
+                        <input type="text" id="name" name="user_name">
+                      </li>
+                      <li>
+                        <label for="mail">Correo electrónico:</label>
+                        <input type="email" id="mail" name="user_mail">
+                      </li>
+                      <li>
+                        <label for="msg">Mensaje:</label>
+                        <textarea id="msg" name="user_message"></textarea>
+                      </li>
+                     </ul>
+            </ul>
+            </form>
         </div>
     </div>
 </body>
