Correcion de errores

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="title">
-            <h1>Hola como están</h1>
+            <h1>Hola como estan</h1>
             <img src="..\e51635bf5a1cb9c2983172d91842f981d1a9847cd625f0530be2f32c4bbfc45c.jpg" alt="Plata chingona">
         </div>
         <div id="formulario">
