--- a/CSS Concepts and Fundaments/CSS-GRID/grid.html
+++ b/CSS Concepts and Fundaments/CSS-GRID/grid.html
@@ -323,16 +323,126 @@
     <section class="container grid-align-tracks"></section>
     <h2 id="grid-min-max">Tamaños Máximos y Mínimos de Grid Tracks</h2>
     <a href="#top">🔝</a>
-    <section class="container grid-min-max"></section>
+    <section class="container grid-min-max">
+      <article class="item">
+        <p>Grid Item 1</p>
+      </article>
+      <article class="item">
+        <p>Grid Item 2</p>
+      </article>
+      <article class="item">
+        <p>Grid Item 3</p>
+      </article>
+      <article class="item">
+        <p>Grid Item 4</p>
+      </article>
+      <article class="item">
+        <p>Grid Item 5</p>
+      </article>
+    </section>
     <h2 id="grid-repeat">Grid con Patrones Repetitivos</h2>
     <a href="#top">🔝</a>
-    <section class="container grid-repeat"></section>
+    <section class="container grid-repeat">
+      <article class="item">
+        <p>grid Item 1</p>
+      </article>
+      <article class="item">
+        <p>grid Item 2</p>
+      </article>
+      <article class="item">
+        <p>grid Item 3</p>
+      </article>
+      <article class="item">
+        <p>grid Item 4</p>
+      </article>
+      <article class="item">
+        <p>grid Item 5</p>
+      </article>
+      <article class="item">
+        <p>grid Item 6</p>
+      </article>
+      <article class="item">
+        <p>grid Item 7</p>
+      </article>
+      <article class="item">
+        <p>grid Item 8</p>
+      </article>
+      <article class="item">
+        <p>grid Item 9</p>
+      </article>
+      <article class="item">
+        <p>grid Item 10</p>
+      </article>
+      <article class="item">
+        <p>grid Item 11</p>
+      </article>
+      <article class="item">
+        <p>grid Item 12</p>
+      </article>
+      <article class="item">
+        <p>grid Item 13</p>
+      </article>
+      <article class="item">
+        <p>grid Item 14</p>
+      </article>
+      <article class="item">
+        <p>grid Item 15</p>
+      </article>
+      <article class="item">
+        <p>grid Item 16</p>
+      </article>
+      <article class="item">
+        <p>grid Item 17</p>
+      </article>
+      <article class="item">
+        <p>grid Item 18</p>
+      </article>
+      <article class="item">
+        <p>grid Item 19</p>
+      </article>
+    </section>
     <h2 id="grid-dynamics">Grids Dinámicas</h2>
     <a href="#top">🔝</a>
-    <section class="container grid-dynamics"></section>
+    <section class="container grid-dynamics">
+      <article class="item">
+        <p>Grid Item 1</p>
+      </article>
+      <article class="item">
+        <p>Grid Item 2</p>
+      </article>
+      <article class="item">
+        <p>Grid Item 3</p>
+      </article>
+      <article class="item">
+        <p>Grid Item 4</p>
+      </article>
+      <article class="item">
+        <p>Grid Item 5</p>
+      </article>
+    </section>
     <h2 id="grid-responsive">Responsive sin Media Queries</h2>
     <a href="#top">🔝</a>
-    <section class="container grid-responsive"></section>
+    <section class="container grid-responsive">
+      <article class="item">Grid Item 1</article>
+      <article class="item">Grid Item 2</article>
+      <article class="item">Grid Item 3</article>
+      <article class="item">Grid Item 4</article>
+      <article class="item">Grid Item 5</article>
+      <article class="item">Grid Item 6</article>
+      <article class="item">Grid Item 7</article>
+      <article class="item">Grid Item 8</article>
+      <article class="item">Grid Item 9</article>
+      <article class="item">Grid Item 10</article>
+      <article class="item">Grid Item 11</article>
+      <article class="item">Grid Item 12</article>
+      <article class="item">Grid Item 13</article>
+      <article class="item">Grid Item 14</article>
+      <article class="item">Grid Item 15</article>
+      <article class="item">Grid Item 16</article>
+      <article class="item">Grid Item 17</article>
+      <article class="item">Grid Item 18</article>
+      <article class="item">Grid Item 19</article>
+    </section>
     <h2 id="grid-nested">Grids Anidados</h2>
     <a href="#top">🔝</a>
     <section class="container grid-nested"></section>
